<?xml version="1.0" encoding="utf-8"?>
<com.jackie.testdialog.MyLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
   <TextView
       android:id="@+id/txt_a"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="test1"/>
    <Button
        android:id="@+id/btn_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="test1"
        />
</com.jackie.testdialog.MyLinearLayout>